refactor(font): 将SDF字形创建从单线程执行器切换到虚拟线程执行器
- 移除单线程执行器，改用每个任务一个虚拟线程的执行器
- 利用现有的synchronized块提供必要的互斥保护
- 使用虚拟线程提高字形创建的并发性能
- 保持字形或批次处理的独立线程隔离